--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.5
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.1
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 1.5.1
-	maven_group = gd.rf.acro.givemehats
-	archives_base_name = give-me-hats-1.16
+	mod_version = 1.6
+	maven_group = gd.rf.acro
+	archives_base_name = GiveMeHats
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.32.0+1.16
+	fabric_version=0.34.9+1.17
