--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.5
-	loader_version=0.11.3
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.18
+	yarn_mappings=1.18+build.1
+	loader_version=0.12.6
 
 # Mod Properties
-	mod_version = 1.4.1
+	mod_version = 1.7.5
 	maven_group = gd.rf.acro.givemehats
-	archives_base_name = give-me-hats-1.16
+	archives_base_name = GiveMeHats
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.32.0+1.16
+	fabric_version=0.43.1+1.18
