--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.6
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.1
+	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.7.5
-	maven_group = gd.rf.acro.givemehats
+	mod_version = 2.0.0
+	maven_group = gd.rf.acro
 	archives_base_name = GiveMeHats
 
 # Dependencies
-	fabric_version=0.43.1+1.18
+	fabric_version=0.47.8+1.18.2
