--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,4 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
-	loader_version=0.13.3
-
-# Mod Properties
-	mod_version = 2.0.0
-	maven_group = gd.rf.acro
-	archives_base_name = GiveMeHats
-
-# Dependencies
-	fabric_version=0.47.8+1.18.2
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
