--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
-	loader_version=0.13.3
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.7
 
 # Mod Properties
-	mod_version = 2.0.0
-	maven_group = gd.rf.acro
-	archives_base_name = GiveMeHats
+mod_version=3.0.1
+maven_group=gd.rf.acro.givemehats
+archives_base_name=givemehats
 
 # Dependencies
-	fabric_version=0.47.8+1.18.2
+fabric_version=0.92.0+1.20.1
+cca_version=5.2.2
+trinkets_version=3.7.1
